cmake_minimum_required(VERSION 2.8)
project( main )
find_package( OpenCV REQUIRED )
add_executable( main main.cpp segm/ms.cpp segm/msImageProcessor.cpp segm/msSys.cpp segm/rlist.cpp segm/RAList.cpp)
add_executable( meanshift_util meanshift_util.cpp segm/ms.cpp segm/msImageProcessor.cpp segm/msSys.cpp segm/rlist.cpp segm/RAList.cpp)
target_link_libraries( main ${OpenCV_LIBS} )
target_link_libraries( meanshift_util ${OpenCV_LIBS} )
