cmake_minimum_required(VERSION 2.8)
project( main )
find_package( OpenCV REQUIRED )
add_executable( label label.cpp segm/ms.cpp segm/msImageProcessor.cpp segm/msSys.cpp segm/rlist.cpp segm/RAList.cpp segment.h)
add_executable( train train.cpp segm/ms.cpp segm/msImageProcessor.cpp segm/msSys.cpp segm/rlist.cpp segm/RAList.cpp segment.h)
add_executable( seg_demo seg_demo.cpp segm/ms.cpp segm/msImageProcessor.cpp segm/msSys.cpp segm/rlist.cpp segm/RAList.cpp segment.h)
add_executable( meanshift_util meanshift_util.cpp segm/ms.cpp segm/msImageProcessor.cpp segm/msSys.cpp segm/rlist.cpp segm/RAList.cpp segment.h)
target_link_libraries( train ${OpenCV_LIBS} )
target_link_libraries( label ${OpenCV_LIBS} )
target_link_libraries( seg_demo ${OpenCV_LIBS} )
target_link_libraries( meanshift_util ${OpenCV_LIBS} )
