cmake_minimum_required(VERSION 2.8)
project( train )
find_package( OpenCV REQUIRED )
FIND_PACKAGE( Boost 1.53 COMPONENTS system filesystem REQUIRED )
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${Boost_LIBRARY_DIR} )
add_executable( label label.cpp segm/ms.cpp segm/msImageProcessor.cpp segm/msSys.cpp segm/rlist.cpp segm/RAList.cpp segment.h)
add_executable( train train.cpp segm/ms.cpp segm/msImageProcessor.cpp segm/msSys.cpp segm/rlist.cpp segm/RAList.cpp segment.h)
add_executable( seg_demo seg_demo.cpp segm/ms.cpp segm/msImageProcessor.cpp segm/msSys.cpp segm/rlist.cpp segm/RAList.cpp segment.h)
add_executable( meanshift_util meanshift_util.cpp segm/ms.cpp segm/msImageProcessor.cpp segm/msSys.cpp segm/rlist.cpp segm/RAList.cpp segment.h)
add_executable( table_out_demo table_out_demo.cpp segment.h)
add_executable( table_in_demo table_in_demo.cpp segment.h)
target_link_libraries( train ${OpenCV_LIBS} ${Boost_LIBRARIES})
target_link_libraries( label ${OpenCV_LIBS} ${Boost_LIBRARIES})
target_link_libraries( seg_demo ${OpenCV_LIBS} ${Boost_LIBRARIES})
target_link_libraries( table_out_demo ${OpenCV_LIBS})
target_link_libraries( table_in_demo ${OpenCV_LIBS})
target_link_libraries( meanshift_util ${OpenCV_LIBS} ${Boost_LIBRARIES})
